Removed NavQuirk where FONT tags were ignored if an element was explicitly sized, since we couldn't know if it was explicitly sized by an *implicit* style rule or by another FONT tag. b=25810 r=dcone